# APIDesign

./: .gitignore  README.md
.github/workflows/: backend.yml  frontend.yml
src/: compose.yaml
src/app/: requirements.txt
src/backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  weather.db
src/backend/alembic/versions/: 0756af09bc26_update_email_type.py  356c54a20d1c_initial_migration.py  a3ca5d83001c_add_temperature_and_description_to_.py  aecdda41aba6_add_timestamp.py
src/backend/app/: Dockerfile  crud.py  database.py  locationData.py  main.py  models.py  routes.py  schemas.py
src/backend/app/crud/: crud.py
src/backend/app/database/: database.py
src/backend/app/models/: location.py  models.py
src/backend/app/schemas/: location.py  schemas.py
src/backend/app/templates/: index.html
src/backend/tests/: test_main.py
src/frontend/: Dockerfile  package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.js
src/frontend/src/pages/: Documentation.js  HomePage.js
src/frontend/src/pages/markdown/: documentation.md
task/: links.txt  script.md
task/UML/: api.uml
